--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,254 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap');
+
+
+
+* {
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  text-decoration: none;
+}
+
+body {
+  background-color: darkgray;
+  font-family: 'Poppins', sans-serif;
+}
+
+.form-component {
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 200px auto; */
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+ 
+}
+
+.form {
+  width: 300px;
+  border: 2px solid #333;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form form input {
+  border: none;
+  background-color: #f7f7f7;
+  font-size: 18px;
+  padding: 10px;
+  border-radius: 5px;
+  width: 100%;
+  box-sizing: border-box;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form form button {
+  background-color: #008f7a;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.form a {
+  text-decoration: none;
+  color: #999;
+}
+
+.form a:hover {
+
+  color: #333;
+}
+
+.error {
+  position: absolute;
+  top: 0;
+  left: 5%;
+  transform: translateX(-50%);
+  background-color: red;
+  color: white;
+  padding: 10px;
+  z-index: 1;
+  border-radius: 20px;
+  margin: 100px;
+}
+
+.error-form p{
+  background-color: red;
+  padding: 4px;
+  margin: 20px;
+  color: white;
+  text-align: center;
+  width: 20%;
+border-radius: 30px;
+}
+
+.nav-bar {
+  background-color: rgb(135, 211, 226);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 13px;
+}
+
+.home-icon {
+  font-size: 26px;
+  color: aliceblue;
+}
+
+
+.nav-bar ul li {
+  list-style: none;
+  display: inline;
+  margin: 10px;
+}
+
+.nav-bar ul li a {
+  text-decoration: none;
+  font-size: 20px;
+  color: rgb(105, 101, 101);
+}
+
+.nav-bar ul li a:hover {
+  color: white;
+}
+
+
+.profile {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  margin: 100px auto;
 }
 
-.App-link {
-  color: #61dafb;
+.image img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.profile-info {
+  text-align: center;
+}
+
+.profile-info h2 {
+  margin: 0;
+  font-size: 18px;
+}
+
+.profile-action button {
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+  margin-top: 10px;
+  transition: background-color 0.3s;
+}
+
+.profile-action button.delete {
+  background-color: #ff5252; /* Red */
+  color: #fff;
+}
+
+.profile-action button.edit {
+  background-color: #ffa500; /* Orange */
+  color: #fff;
+}
+
+.profile-action button:hover {
+  background-color: #008f7a; /* Darker teal on hover */
+}
+
+
+/* Home.css */
+
+
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.info {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  margin: 100px auto;
+}
+
+.slider-btn {
+  background-color: #008f7a;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  margin: 0 10px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.slider-btn:hover {
+  background-color: #006953;
+}
+
+.slider-btn:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.slider-btn.next-btn:disabled {
+  margin-right: 0;
+}
+
+.slider-btn.prev-btn:disabled {
+  margin-left: 0;
+}
+
+.slider h1 {
+  margin: 20px;
+}
+
+.slider-card {
+  width: 50%;
+}
+
+.slider-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.slider-image img{
+  width: 100%;
+  height: 100%; /* Set a fixed height for the images */
+  object-fit: cover; 
 }
